<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP50_Error" Id="{ea26b7af-7960-4a44-8087-9a8f72ce12ec}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP50_Error
VAR
	OP50_Step_Err_1: TON;
	OP50_Step_Err_2: TON;
	OP50_Step_Err_3: TON;
	OP50_Step_Err_4: TON;
	OP50_Step_Err_5: TON;
	OP50_Step_Err_6: TON;
	
	Gripper_ERR_Timer : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Set ERROR ACTIVE
IF ((OP50_GVL.OP50_ErrorWord_0<>0) OR (OP50_GVL.OP50_ErrorWord_1<>0) OR (OP50_GVL.OP50_ErrorWord_2<>0)) THEN
	OP50_GVL.OP50_ErrorActive:= TRUE;
END_IF

//Reset ErrorActive
IF OP50_HMI_Reset or HMI_Reset THEN 
	OP50_GVL.OP50_ErrorActive:= FALSE;
	OP50_GVL.OP50_ErrorWord_0:= 0;
	OP50_GVL.OP50_ErrorWord_1:= 0;
	OP50_GVL.OP50_ErrorWord_2:= 0;	
END_IF

// Auto Seq Step Error

//Horizontal Servo is not in home or safe-work position 
OP50_Step_Err_1(IN:=(OP50_GVL.OP50_AutoSeq=70) , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=70 AND OP50_Step_Err_1.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.0:=TRUE;
END_IF


//Horizontal Servo not reaching pick position 
OP50_Step_Err_1(IN:=(OP50_GVL.OP50_AutoSeq=80) , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=80 AND NOT OP50_HORI_SERVO_ON_WRK_PICK AND OP50_Step_Err_1.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.1:=TRUE;
END_IF

// Gripper is not closing
OP50_Step_Err_2(IN:=OP50_GVL.OP50_AutoSeq=82 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=82 AND OP50_Step_Err_2.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.2:=TRUE;
END_IF

// Vertical Servo not reaching work position 
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=100 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=100 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.3:=TRUE;
END_IF

// Vertical Servo not reaching safe-work position 
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=150 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=150 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.4:=TRUE;
END_IF

// Checking the gripper condition is opened or not
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=140 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=140 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.5:=TRUE;
END_IF

//  Horizontal sevo not moving to place position
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=160 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=160 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.6:=TRUE;
END_IF

//  Vertical sevo not moving to place position
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=180 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=180 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.7:=TRUE;
END_IF

// Vertical Servo not reaching safe-work position 
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=210 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=210 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.8:=TRUE;
END_IF

//  Horizontal sevo not moving to safe work position
OP50_Step_Err_3(IN:=OP50_GVL.OP50_AutoSeq=240 , PT:=T#5S , Q=> , ET=> );
IF (OP50_GVL.OP50_AutoSeq=240 AND OP50_Step_Err_3.Q) THEN
	OP50_GVL.OP50_ErrorWord_0.9:=TRUE;
END_IF

IF Gripper_ERR_Timer.Q THEN
	OP50_GVL.OP50_ErrorWord_0.10:=TRUE;
END_IF

Gripper_ERR_Timer(IN:=I50_LH_GRIP_CLSE_I1101_7 OR I50_RH_GRIP_CLSE_I1110_1,PT:=T#500MS);]]></ST>
    </Implementation>
    <LineIds Name="OP50_Error">
      <LineId Id="3" Count="73" />
      <LineId Id="2" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="92" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>